--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but final_project doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but Trainer doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
 
